# efda

./: Evaluation Framework for Dependency Analysis.xlsx  README.md
c/autoconf/with-vendored-source-code/: .gitignore  Makefile.am  README.md  cleanup  configure.ac  setup
c/autoconf/with-vendored-source-code/lib/sqlite/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool  sqlite3.pc
c/autoconf/with-vendored-source-code/lib/sqlite/tea/: configure  configure.ac
c/autoconf/with-vendored-source-code/lib/sqlite/tea/generic/: tclsqlite3.c
c/autoconf/with-vendored-source-code/src/: Makefile  Makefile.am  Makefile.in
c/cmake/with-system-dependencies/: CMakeLists.txt  README.md
c/cmake/with-vendored-source-code/: CMakeLists.txt  README.md
c/makefile/with-vendored-shared-objects/: Makefile  README.md  info.json
csharp/nuget/dlls-packagereference-comparison/: README.md
csharp/nuget/with-packagereference/: README.md  info.json
csharp/nuget/with-packages.config/: README.md  info.json
golang/: README.md
golang/dep/dep-override/: .gitignore  Gopkg.toml  README.md  main.go
golang/glide/only-glide.yaml/: .gitignore  README.md  glide.yaml  info.json
golang/glide/with-glide.lock/: .gitignore  README.md
golang/godep/godep-basic/: .gitignore  README.md
golang/govendor/govendor-basic/: .gitignore  README.md  main.go
golang/modules/modules-basic/: README.md  go.mod  go.sum  main.go
golang/no-package-manager/goget-basic/: .gitignore  README.md  info.json
golang/trash/trash-basic/: .gitignore  README.md  info.json  vendor.conf
java/ant/with-ivy/: .gitignore  README.md  build.xml  info.json  ivy.xml
java/ant/without-ivy/: README.md  info.json
java/gradle/gradle-scopes/: README.md  build.gradle  info.json  settings.gradle
java/gradle/multi-modules/: README.md  build.gradle  info.json  settings.gradle
java/jars/ears/: README.md  pom.xml
java/jars/fat-jars/: README.md  info.json
java/jars/in-house-fat-jars/: README.md
java/jars/jars-in-jar/: README.md
java/jars/original-jars/: README.md  info.json
java/jars/recompiled-jars/: README.md  info.json
java/jars/wars/: README.md  (+1 more)
(+143 files in other folders)
